# mrw-track-control-ng

./: .astylerc  .gitignore  10-mrw.conf  CMakeLists.txt  CodingConvention.md  Doxyfile  Glossary.md  Jenkinsfile  LICENSE.md  MRW-NG.desktop  MRW-NextGeneration.pro  README.md  ReadMrw.pro  annotated.html  classes.html  common.pri  dir_1788f8309b1a812dcb800a185471cf6c.html  dir_23ec12649285f9fabf3a6b7380226c28.html  dir_263426dc267c7f7b8bc816493cda4bef.html  dir_3e4bc9d9d6fd8c09eaaf743775ca9cda.html  dir_3f14f6767c31cb4a1d22c13c18cc6fc3.html  dir_3fb58befa5a5aac34aab8587948ccb58.html  dir_6cc62ac764df1e9534bb6c54c15a6b7f.html  dir_6cc62ac764df1e9534bb6c54c15a6b7f_dep.map  dir_6cc62ac764df1e9534bb6c54c15a6b7f_dep.md5  dir_9381a7bbd03577d6d8720c7f35c94ffa.html  doxygen.css  doxygen_blank.html  doxygen_crawl.html  flags.pri  functions.html  functions_b.html  functions_c.html  functions_d.html  functions_e.html  functions_enum.html  functions_eval.html  functions_f.html  functions_func.html  functions_func_b.html  (+114 more)
can/: CMakeLists.txt  MRW-Can.pro  README.md  cansettings.cpp  cansettings.h  commands.h  mrwbusservice.cpp  mrwbusservice.h  mrwmessage.cpp  mrwmessage.h  types.h
log/: CMakeLists.txt  MRW-Log.pro  README.md  filelogger.cpp  filelogger.h  loggerbase.cpp  loggerbase.h  loggerservice.cpp  loggerservice.h  stdlogger.cpp  stdlogger.h  syslogger.cpp  syslogger.h
mock/: CMakeLists.txt  MRW-CtrlMock.pro  doublecrossswitchcontrollermock.cpp  doublecrossswitchcontrollermock.h  railcontrollermock.cpp  railcontrollermock.h  regularswitchcontrollermock.cpp  regularswitchcontrollermock.h  signalcontrollermock.cpp  signalcontrollermock.h
model/: CMakeLists.txt  MRW-Model.pro  README.md  abstractswitch.cpp  abstractswitch.h  area.cpp  area.h  assemblypart.cpp  assemblypart.h  commands.h  controller.cpp  controller.h  crossing.cpp  crossing.h  device.cpp  device.h  doublecrossswitch.cpp  doublecrossswitch.h  formsignal.cpp  formsignal.h  light.cpp  light.h  lightmodule.cpp  lightmodule.h  lightsignal.cpp  lightsignal.h  modelrailway.cpp  modelrailway.h  modelrepository.cpp  modelrepository.h  module.cpp  module.h  mrwmodel.cpp  mrwmodel.h  multiplexconnection.cpp  multiplexconnection.h  position.cpp  position.h  profilelight.cpp  profilelight.h  (+24 more)
statecharts/: .project  CMakeLists.txt  CodeGenerator.sgen  CodeGeneratorCpp11.sgen  CodeGeneratorQt.sgen  ConfigStatechart.cpp  ConfigStatechart.h  Configure.sctunit  Configure.ysc  Crossing.sctunit  Crossing.ysc  CrossingStatechart.cpp  CrossingStatechart.h  ImageGenerator.sgen  MRW-Statecharts.pro  MRW-Test-Statecharts.pro  OperatingMode.cpp  OperatingMode.h  OperatingMode.sctunit  OperatingMode.ysc  OperatingModeStatechart.cpp  OperatingModeStatechart.h  Route.sctunit  Route.ysc  RouteStatechart.cpp  RouteStatechart.h  Section.sctunit  Section.ysc  SectionStatechart.cpp  SectionStatechart.h  Signal.sctunit  Signal.ysc  SignalController.sctunit  SignalController.ysc  SignalControllerStatechart.cpp  SignalControllerStatechart.h  SignalStatechart.cpp  SignalStatechart.h  Switch.sctunit  Switch.ysc  (+14 more)
statecharts/common/: sc_eventdriven.h  sc_statemachine.h  sc_timer.h  sc_types.h
statecharts/test/: CMakeLists.txt  MRW-Test-Statecharts.pro  README.md  sct-unit.sh  test-common.pri
test/: .project  CMakeLists.txt  MRW-Test.pro  Test-Crossing.modelrailway  Test-Flank.modelrailway  Test-Light.modelrailway  Test-Numbering.modelrailway  Test-Railway.modelrailway  Test-Switch.modelrailway  Test-Unknown.modelrailway  collections.cpp  collections.h  main.cpp  test.properties  testbase.h  testcan.cpp  testcan.h  testcanservice.cpp  testcanservice.h  testcrossing.cpp  testcrossing.h  testdef.h  testdoublecrossswitchwidget.cpp  testdoublecrossswitchwidget.h  testflankswitch.cpp  testflankswitch.h  testlight.cpp  testlight.h  testmodel.cpp  testmodel.h  testmodelbase.cpp  testmodelbase.h  testnumbering.cpp  testnumbering.h  testrailwidget.cpp  testrailwidget.h  testregularswitchwidget.cpp  testregularswitchwidget.h  testroute.h  testrouting.cpp  (+9 more)
tools/: CMakeLists.txt  README.md
tools/config/: CMakeLists.txt  MRW-Configure.pro  README.md  configurationservice.cpp  configurationservice.h  main.cpp
track-control/: CMakeLists.txt  MRW-TrackControl.pro  README.md  beermodeservice.cpp  beermodeservice.h  controlledroute.cpp  controlledroute.h  log.cpp  log.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  mrwmessagedispatcher.cpp  mrwmessagedispatcher.h  regionform.cpp  regionform.h  regionform.ui  resources.qrc  routebatch.cpp  routebatch.h  screenblankhandler.cpp  screenblankhandler.h  widgetroute.cpp  widgetroute.h
ui/: CMakeLists.txt  MRW-UI.pro  README.md  barwidget.cpp  barwidget.h  basewidget.cpp  basewidget.h  circlelivewidget.cpp  circlelivewidget.h  clockwidget.cpp  clockwidget.h  controllerwidget.cpp  controllerwidget.h  doublecrossswitchwidget.cpp  doublecrossswitchwidget.h  opmodewidget.cpp  opmodewidget.h  railwidget.cpp  railwidget.h  regularswitchwidget.cpp  regularswitchwidget.h  sectionwidget.cpp  sectionwidget.h  signalwidget.cpp  signalwidget.h  stationwidget.cpp  stationwidget.h
util/: CMakeLists.txt  MRW-Util.pro  README.md  appsupport.cpp  appsupport.h  batch.cpp  batch.h  batchparticipant.cpp  batchparticipant.h  cleanvector.h  clockservice.cpp  clockservice.h  constantenumerator.h  dumphandler.cpp  dumphandler.h  duration.cpp  duration.h  globalbatch.cpp  globalbatch.h  hexline.cpp  hexline.h  log.cpp  log.h  method.cpp  method.h  properties.cpp  properties.h  random.cpp  random.h  self.h  settings.cpp  settings.h  signalhandler.cpp  signalhandler.h  singleton.h  string.h  stringutil.cpp  stringutil.h  termhandler.cpp  termhandler.h
widget-study/: CMakeLists.txt  MRW-WidgetStudy.pro  doublecrossswitchstudy.cpp  doublecrossswitchstudy.h  doublecrossswitchstudy.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  railstudy.cpp  railstudy.h  railstudy.ui  signalstudy.cpp  signalstudy.h  switchstudy.cpp  switchstudy.h  switchstudy.ui  widgetsaver.cpp  widgetsaver.h  widgetstudy.cpp  widgetstudy.h  widgetstudy.ui
(+819 files in other folders)
